tests/fixtures/invalid/len_int.py
# Cannot call len() with Int
x = len(1)
